# codecrafters-dns-server-rust

./: Cargo.toml  README.md
src/: codec.rs  error.rs  lib.rs  main.rs  protocol.rs  server.rs
src/handlers/: forwarder.rs  mod.rs
src/parser/: header.rs  mod.rs  name.rs  question.rs  record.rs
