[package]
name = "codecrafters-dns-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
# Async Runtime & Networking
tokio = { version = "1.28", features = ["full"] }

# Parser-Combinator Framework for safe and efficient parsing
nom = "7.1"

# Ergonomic Buffer Management
bytes = "1.5"

# Command-Line Argument Parsing
clap = { version = "4.5", features = ["derive"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging Facade and Implementation
log = "0.4"
env_logger = "0.11"

# Type-safe conversions from integers to enums
num_enum = "0.7"